# pano2kinematics

./: .gitignore  README.md  december_offline.py  demo-miroki.py  environment.yml  environment_comfortable_py10.yml  environment_min_py10.yml  february_offline.py  install_dependencies.sh  live_cpu.py  live_gpu.py  march_offline.py  parallele.sh  pyproject.toml  requirements.txt  run_all.sh
configs/: biomeca.yaml  paths.py
equilib/: __init__.py
equilib/equi2pers/: base.py  torch_impl.py
models/: criterion.py  decoder.py  dn_components.py  matcher.py  position_encoding.py  sat_model.py
models/encoders/: __init__.py
models/human_models/: __init__.py  smpl_models.py
pipeline_nlf/: utils.py  utils_adaptive_fov.py
pipeline_nlf/adaptive_fov/: __init__.py  orientation.py  tracking.py
pipeline_nlf/canonical_verts/: README.md  smpl.npy  smplx.npy
pipeline_nlf/demo/: __init__.py  box_overlay_single_hand.py  box_overlay_two_hands.py  whep.py
pipeline_nlf/live/: __init__.py  gst_reader.py  paths.py  projection.py  recorder.py
pipeline_nlf/offline/: __init__.py  bbox_init.py  common.py  hand_follow.py  io.py
pipeline_nlf/utils/: __init__.py  camera.py  image.py  tracking.py  trc.py  visualization.py
ros2_ws/: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/p2k_bridge/lib/p2k_bridge/: pose_operation  vertices_bridge  vertices_debug  vertices_debug = p2k_bridge.vertices_debug_node:mainpose_operation  (+1 more)
ros2_ws/log/: latest_build
ros2_ws/src/p2k_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/p2k_bridge/config/: bridge.yaml
ros2_ws/src/p2k_bridge/p2k_bridge/: socket_utils.py  yaw_bridge_node.py
ros2_ws/src/p2k_ik/: README.md
ros2_ws/src/p2k_msgs/: README.md
trackers/: botsort_occlusion.yaml
(+6 files in other folders)
