<?xml version="1.0"?>
<package format="3">
  <name>p2k_bridge</name>
  <version>0.1.0</version>
  <description>Socket to ROS2 bridge for pano2kinematics vertices and yaw streams.</description>
  <maintainer email="mathis@example.com">mathis</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
